# cosine

./: .clangd  README.md  execute-with-nixgl-if-needed.sh  flake.nix  justfile
.github/workflows/: test.yml
flake/: helpers.nix  outputs.nix
macs/: colina.mac  early-cli.mac  fe55.mac  geantinos.mac  kr.mac  late-cli.mac  lt.mac  pcolina.mac  physics_em_optical.mac  s1.mac  s2.mac  vis.mac
src/: LXe.cc  common.hh  config.cc  config.hh  cosine.cc  mesh.cc  meson.build  messenger.cc  messenger.hh  near_plane.cc  near_plane.hh  pcolina.cc  pcolina.hh  ptfe.cc  silicon.cc  silicon.hh  sipm_array.cc  steel.cc  steel.hh  types.cc  types.hh  utils.hh  wire_array.cc  wire_array.hh
src/actions/: event.cc  event.hh  stacking.cc  stacking.hh  store_volume_crossing.cc  store_volume_crossing.hh  tracking.cc  tracking.hh
src/core/: common.hh  config.cc  config.hh  messenger.cc  messenger.hh  symbols.cc  symbols.hh  types.cc  types.hh  utils.hh
src/generators/: geantinos.cc  geantinos.hh  generic.cc  generic.hh  pointlike.cc  pointlike.hh  position.cc  position.hh  s1generator.hh  samplers.hh  scalar.cc  scalar.hh  selector.cc  selector.hh
src/geometry/: calibration_belt.cc  calibration_belt.hh  mesh.cc  mesh.hh  pcolina.cc  pcolina.hh  sipm_array.cc  sipm_array.hh  wire_array.cc  wire_array.hh
src/materials/: LAr.cc  LAr.hh  LArXe.cc  LArXe.hh  LXe.cc  LXe.hh  ptfe.cc  ptfe.hh  silicon.cc  silicon.hh  steel.cc  steel.hh
src/persistency/: hdf5_types.cc  hdf5_types.hh  hdf5_writer.cc  hdf5_writer.hh  manager.cc  manager.hh
src/sensitive/: active.cc  active.hh  sipm.cc  sipm.hh
test/: meson.build  test-LXe.cc  test-reflectivity.cc
